--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "my-app",
+  "name": "cruAdmin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "firebase": "^5.5.4",
     "react": "^16.5.2",
+    "react-bootstrap": "^1.0.0-beta.1",
     "react-dom": "^16.5.2",
-    "react-scripts-ts": "3.1.0"
+    "react-firebaseui": "^3.1.2",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "3.1.0",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -14,10 +21,14 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.5",
+    "@types/jest": "^23.3.8",
     "@types/node": "^10.12.0",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/react-redux": "^6.0.9",
+    "@types/react-router-dom": "^4.3.1",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
     "typescript": "^3.1.3"
   }
 }
