--- a/package.json
+++ b/package.json
@@ -2,37 +2,35 @@
   "name": "cru-admin",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "firebase": "^5.5.4",
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "express": "^4.16.4",
+    "firebase": "^5.9.3",
+    "isomorphic-unfetch": "^3.0.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
-    "react": "^16.5.2",
-    "react-bootstrap": "^1.0.0-beta.1",
-    "react-dom": "^16.5.2",
+    "next": "^8.0.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-scripts-ts": "3.1.0",
-    "react-table": "^6.8.6",
-    "redux": "^4.0.1"
+    "react-jss": "^8.6.1",
+    "react-markdown": "^4.0.6"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
-    "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "dev": "node server.js",
+    "build": "next build",
+    "start": "next start -p $PORT",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.8",
-    "@types/node": "^10.12.0",
-    "@types/react": "^16.4.18",
-    "@types/react-dom": "^16.0.9",
-    "@types/react-redux": "^6.0.9",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-table": "^6.7.14",
-    "jest": "^23.6.0",
-    "ts-jest": "^23.10.4",
-    "typescript": "^3.1.3"
-  }
+    "jest": "^24.7.1"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
