--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
-    "express": "^4.16.4",
-    "firebase": "^6.0.2",
-    "formik": "^1.5.4",
-    "formik-material-ui": "0.0.18",
+    "@material-ui/core": "^4.0.0",
+    "@material-ui/icons": "^4.2.1",
+    "express": "^4.17.1",
+    "firebase": "^6.3.1",
+    "formik": "^1.5.8",
+    "formik-material-ui": "^0.0.20",
     "isomorphic-unfetch": "^3.0.0",
     "moment": "^2.22.2",
-    "moment-timezone": "^0.5.23",
-    "next": "^8.0.4",
+    "moment-timezone": "^0.5.26",
+    "next": "^9.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-firebaseui": "^3.1.2",
     "react-jss": "^8.6.1",
-    "react-markdown": "^4.0.6"
+    "react-markdown": "^4.1.0"
   },
   "scripts": {
     "dev": "node server.js",
