--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.3.0",
     "express": "^4.17.1",
     "firebase": "^6.3.1",
     "formik": "^1.5.8",
