--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
+    "@date-io/moment": "^1.3.9",
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.4",
     "@material-ui/styles": "^4.3.0",
     "express": "^4.17.1",
     "firebase": "^6.3.1",
@@ -25,15 +27,20 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "next start -p $PORT",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
-    "jest": "^24.7.1"
+    "firebase-server": "^1.0.2",
+    "jest": "^24.9.0"
   },
   "browserslist": [
     ">0.2%",
