--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,14 @@
 {
     "presets": [
-        "next/babel"
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "esmodules": true
+                }
+            }
+        ],
+        "next/babel",
+        "@babel/preset-react"
     ]
 }
