--- a/package.json
+++ b/package.json
@@ -4,43 +4,47 @@
   "private": true,
   "main": "index.js",
   "dependencies": {
-    "@date-io/moment": "^1.3.9",
-    "@material-ui/core": "^4.0.0",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/pickers": "^3.2.4",
-    "@material-ui/styles": "^4.3.0",
+    "@date-io/moment": "^1.3.11",
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "@material-ui/pickers": "^3.2.6",
+    "@material-ui/styles": "^4.5.0",
     "express": "^4.17.1",
-    "firebase": "^6.3.1",
+    "firebase": "^6.6.2",
     "formik": "^1.5.8",
     "formik-material-ui": "^0.0.20",
     "isomorphic-unfetch": "^3.0.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.26",
-    "next": "^9.0.2",
+    "next": "^9.0.7",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-firebaseui": "^3.1.2",
-    "react-markdown": "^4.1.0"
+    "react-markdown": "^4.2.2"
   },
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
     "start": "next start -p $PORT",
-    "test": "jest",
+    "test": "TEST=true jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.6.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-jest": "^24.9.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.16.0",
     "firebase-server": "^1.0.2",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "react-test-renderer": "^16.10.2"
   },
   "browserslist": [
     ">0.2%",
