updatte ci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,10 @@ jobs:
 
       - run: npm install
       - run: npm install --save-dev
+      - run:
+        command: |
+          node --version
+          npm --version
 
       - save_cache:
           paths:
