--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
 
       - run: npm install
       - run: npm install --save-dev
+      - run: npm rebuild
       - run:
           command: |
             node --version
