--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
             npm --version
       - run:
           name: Install Firebase Tools
-          command: npm install -g firebase-tools
+          command: npm install firebase-tools
 
       - save_cache:
           paths:
