--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,6 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      # - image: circleci/node:current
       - image: ayltai/circleci-openjdk-node:jdk8-node11
 
       # Specify service dependencies here if necessary
@@ -29,11 +28,11 @@ jobs:
 
       - run: npm install
       - run: npm install --save-dev
-      # - run: npm rebuild
-      # - run:
-      #     command: |
-      #       node --version
-      #       npm --version
+      - run: npm rebuild
+      - run:
+          command: |
+            node --version
+            npm --version
       - run:
           name: Install Firebase Tools
           command: npm install --prefix=./firebase-cli firebase-tools
