Event Model cleanup and testing improvements

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
+            - ~/.cache/firebase/emulators/
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - run:
