--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@date-io/moment": "^2.4.0",
+    "@firebase/testing": "^0.16.14",
     "@material-ui/core": "^4.9.4",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
@@ -29,7 +30,8 @@
     "start": "next start -p $PORT",
     "test": "TEST=true jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "firebase": "firebase emulators:start --only firestore"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.8.4",
