--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
-    "react-markdown": "^4.3.1"
+    "react-markdown": "^4.3.1",
+    "react-router-dom": "^5.1.2"
   },
   "scripts": {
     "dev": "node server.js",
